--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,10 +5,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Agende já seu serviço no site Leandro & Alessandro"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React App</title>
+    <title>Leandro e Alessandro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
