--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-BR" style="min-height: 100vh; background-color: #ced4da">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Sched - Agende seus servi;os</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <title>Sched - Agende seus serviços</title>
   </head>
   <body>
     <noscript>Ative o javascript para executar o website</noscript>
